crates/java-syntax/tests/snapshots/parser_snapshots__parse_while_stmt_short.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A {
    void func() {
        while (true) break;
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
WHILE_KW "while"
WHITESPACE " "
L_PAREN "("
TRUE_LIT "true"
R_PAREN ")"
WHITESPACE " "
BREAK_KW "break"
SEMICOLON ";"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  CLASS_DECL
    CLASS_KW "class"
    WHITESPACE " "
    IDENTIFIER "A"
    CLASS_BODY
      WHITESPACE " "
      L_BRACE "{"
      METHOD_DECL
        WHITESPACE "\n    "
        VOID_KW "void"
        WHITESPACE " "
        IDENTIFIER "func"
        FORMAL_PARAMETERS
          L_PAREN "("
          R_PAREN ")"
        BLOCK
          WHITESPACE " "
          L_BRACE "{"
          WHILE_STMT
            WHITESPACE "\n        "
            WHILE_KW "while"
            PARENTHESIZED_EXPR
              WHITESPACE " "
              L_PAREN "("
              LITERAL
                TRUE_LIT "true"
              R_PAREN ")"
            BREAK_STMT
              WHITESPACE " "
              BREAK_KW "break"
              SEMICOLON ";"
          WHITESPACE "\n    "
          R_BRACE "}"
      WHITESPACE "\n"
      R_BRACE "}"
  WHITESPACE "\n"
